# cypherweavers.cafe

./: .editorconfig  Cargo.toml  LICENSE  README.md  config.kdl  nodes.kdl  shell.nix  style.css
.github/workflows/: woof  woof.yml
assets/: badge.aseprite
src/: cache.rs  card.rs  config.rs  main.rs  page.rs
src/html/: card.rs  fragments.rs  mod.rs  page.rs
