[package]
name = "cypherweavers-cafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "*"
knuffel = "3"
miette = { version = "5.7", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
